platform/dashboard/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=oidc
            - --oidc-issuer-url=https://homelab-pnqnnc.zitadel.cloud
            - --email-domain=*
            - --upstream=https://kubernetes-dashboard:8443
            - --provider-display-name=Zitadel
            - --pass-access-token=true
            - --pass-authorization-header=true
            - --skip-provider-button=true
            - --redirect-url=https://k8s.mlad.dk/oauth2/callback
            - --http-address=0.0.0.0:4180
            - --cookie-secure=false
#            - --code-challenge-method=S256
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
